--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 
+.main-color {
+  background-color: #f9a335;
+}
+
+#recipe-search-bar{
+  background-color: #f9a335;
+}
