--- a/src/app/components/recipe-results-list/recipe-results-list.component.html
+++ b/src/app/components/recipe-results-list/recipe-results-list.component.html
@@ -1,3 +1,11 @@
-<div *ngFor="">
-
+<div *ngFor="let filter of FILTERS">
+    <label [for]="filter.id">{{filter.id}}</label>
+    <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
+        (change)="updateFilteredRecipes()" [value]="filter.value">
 </div>
+
+<ul>
+    <li *ngFor="let recipe of recipes">
+        <app-recipe-result></app-recipe-result>
+    </li>
+</ul>
