added recipe details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-header></app-header>
-<app-recipe-results-list></app-recipe-results-list>
+<app-recipe-results-list *ngIf="currentState == 0" (recipeSelected)="selectedRecipe = $event"></app-recipe-results-list>
+<app-recipe-details *ngIf="currentState == 1" [recipe]="selectedRecipe"></app-recipe-details>
