Create recipe - HTML

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-account-modal></app-account-modal>
 <app-header></app-header>
-<app-recipe-results-list></app-recipe-results-list>
+<!--<app-recipe-results-list></app-recipe-results-list>-->
+<app-recipe-create></app-recipe-create>
 <router-outlet></router-outlet>
