--- a/src/app/components/pages/recipe-details/recipe-details.component.html
+++ b/src/app/components/pages/recipe-details/recipe-details.component.html
@@ -6,7 +6,7 @@
 ingrédients :
 <ul>
     <li *ngFor="let ingredient of ingredients">
-        {{ingredient.nameIngredient}}
+        {{ingredient.quantity}}{{ingredient.unit}} {{ingredient.nameIngredient}}
     </li>
 </ul>
 préparation :
@@ -15,3 +15,10 @@ préparation :
         {{step.stepNb}} : {{step.step}}
     </li>
 </ul>
+
+<h5>Formulaire de commentaires</h5>
+
+<div *ngFor="let review of reviews">
+    <h6>{{review.pseudo}}</h6> ({{review.rate}}/5)
+    <p>{{review.reviewMessage}}</p>
+</div>
