--- a/src/app/components/pages/recipe-create/recipe-create.component.html
+++ b/src/app/components/pages/recipe-create/recipe-create.component.html
@@ -25,10 +25,7 @@
         <label for="recipeType">Recipe Type</label>
         <div class="input-group">
           <select class="custom-select" id="recipeType" required>
-            <option selected disabled value="">Choose...</option>
-            <option>Starter</option>
-            <option>Main course</option>
-            <option>Dessert</option>
+            <option *ngFor="let filter of filters">{{filter.value}}</option>
           </select>
         </div>
       </div>
@@ -57,8 +54,8 @@
     <div class="form-row">
       <div class="col-md-5 mb-3">
         <label for="ingredients">ingredients</label>
-        <select class="custom-select" id="ingredients" *ngFor="let ingredient of ingredients; index as i">
-          <option>
+        <select class="custom-select" id="ingredients">
+          <option *ngFor="let ingredient of ingredients; index as i">
             {{ingredient.nameIngredient}}
           </option>
         </select>
@@ -90,7 +87,9 @@
         <button class="btn btn-sm btn-dark" style="height:30px" >Add step</button>
       </div>
     </div>
-
+    <div class="form-row">
+      <button class="btn btn-sm btn-dark" style="height:30px;width: 80px"> choisir un fichier</button>
+    </div>
     <button [disabled]="!formElement.valid" class="btn btn-md btn-warning mr-2 col-12 mt-2" type="submit">
       <h6 class="d-inline font-weight-bold">Submit recipe</h6>
     </button>
