--- a/src/app/components/recipe-results-list/recipe-results-list.component.html
+++ b/src/app/components/recipe-results-list/recipe-results-list.component.html
@@ -1,4 +1,4 @@
-<div *ngFor="let filter of FILTERS">
+<div *ngFor="let filter of filters">
     <label [for]="filter.id">{{filter.id}}</label>
     <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
         (change)="updateFilteredRecipes()" [value]="filter.value">
