--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,30 +1,30 @@
 <div class="main-color shadow pt-2 pb-1">
   <div class="container-fluid">
     <div class="row mb-2">
-  <!--      Logo and login button for mobile-->
+      <!--      Logo and login button for mobile-->
       <div class="col-7 offset-1 d-flex justify-content-start">
-        <a href="" class="">
+        <a class="" href="">
           <img [src]="LOGO_PATH" alt="logo"/>
         </a>
       </div>
       <div class="col-4 d-flex justify-content-end pr-4">
         <div class="d-flex ml-3">
-          <fa name="user-circle" size="2x" class="my-auto" (click)="onLoginIconClick()"></fa>
+          <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="2x"></fa>
         </div>
       </div>
 
-<!--      Login form-->
-<!--      <div class="col-md-4 offset-md-6 pb-1">-->
-<!--        <app-login-form *ngIf="!mobile"></app-login-form>-->
-<!--        <app-login-form *ngIf="mobile && clickedLoginIcon"></app-login-form>-->
-<!--      </div>-->
+      <!--      Login form-->
+      <!--      <div class="col-md-4 offset-md-6 pb-1">-->
+      <!--        <app-login-form *ngIf="!mobile"></app-login-form>-->
+      <!--        <app-login-form *ngIf="mobile && clickedLoginIcon"></app-login-form>-->
+      <!--      </div>-->
 
-<!--      Recipe search bar-->
+      <!--      Recipe search bar-->
+    </div>
+    <div class="row">
+      <div class="col-12 col-sm-7 col-md-5 col-lg-4 col-xl-3">
+        <app-recipe-search-bar></app-recipe-search-bar>
       </div>
-      <div class="row">
-        <div class="col-12 col-sm-7 col-md-5 col-lg-4 col-xl-3">
-          <app-recipe-search-bar></app-recipe-search-bar>
-        </div>
-      </div>
+    </div>
   </div>
 </div>
