--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -1,7 +1,7 @@
-<form class="pb-2 mb-1 mb-sm-0 text-dark font-weight-bold" #formElement="ngForm" (ngSubmit)="testLogin()">
+<form (ngSubmit)="authenticate()" [formGroup]="form" class="pb-2 mb-1 mb-sm-0 text-dark font-weight-bold">
   <div class="row">
-<!--    LEFT SIDE OF THE LOGIN-->
-    <div [class]="leftColClasses">
+    <!--    LEFT SIDE OF THE LOGIN-->
+    <div class="col-10 offset-1">
       <div class="row">
         <span class="col col-sm-3">
           <label for="login">
@@ -9,13 +9,11 @@
           </label>
         </span>
       </div>
-
       <div class="row">
         <span class="col">
-          <input type="text" id="login" name="login" class="form-control form-control-sm" [(ngModel)]="login" minlength="3" required #loginElement="ngModel">
+          <input class="form-control form-control-sm" formControlName="login" id="login" name="login" type="text">
         </span>
       </div>
-
       <div class="row mt-3">
         <span class="col">
           <label for="password">
@@ -23,24 +21,102 @@
           </label>
         </span>
       </div>
-
-      <div class="row mb-3">
+      <div class="row">
         <span class="col">
-          <input type="password" id="password" name="password" class="form-control form-control-sm" [(ngModel)]="password" minlength="3" required #passwordElement="ngModel">
+          <input class="form-control form-control-sm" formControlName="password" id="password" name="password"
+                 type="password">
         </span>
       </div>
 
-      <div class="row">
-        <div class="col d-flex justify-content-between">
-          <div>
-            <button type="submit" class="btn btn-sm btn-dark ml-1">
-              <h6 class="d-inline font-weight-bold">Sign-up</h6>
-            </button>
+      <!--      EMAIL AND PASSWORD CONFIRMATION-->
+      <div *ngIf="isSigningUp">
+        <div class="row mt-3">
+          <span class="col">
+            <label for="passwordConfirm">
+                Confirm password:
+            </label>
+          </span>
+        </div>
+        <div class="row mb-3">
+          <span class="col">
+            <input class="form-control form-control-sm" formControlName="passwordConfirm" id="passwordConfirm" name="passwordConfirm"
+                   type="password">
+          </span>
+        </div>
+
+        <div class="row mt-3">
+          <span class="col">
+            <label for="firstName">
+                First name:
+            </label>
+          </span>
+        </div>
+        <div class="row mb-3">
+          <span class="col">
+            <input class="form-control form-control-sm" formControlName="firstName" id="firstName" name="firstName"
+                   type="firstName">
+          </span>
+        </div>
+
+        <div class="row mt-3">
+          <span class="col">
+            <label for="lastName">
+                Last name:
+            </label>
+          </span>
+        </div>
+        <div class="row mb-3">
+          <span class="col">
+            <input class="form-control form-control-sm" formControlName="lastName" id="lastName" name="lastName"
+                   type="lastName">
+          </span>
+        </div>
+
+        <div class="row mt-3">
+          <span class="col">
+            <label for="email">
+                Email:
+            </label>
+          </span>
+        </div>
+        <div class="row mb-3">
+          <span class="col">
+            <input class="form-control form-control-sm" formControlName="email" id="email" name="email" type="email">
+          </span>
+        </div>
+      </div>
+
+      <!--      WHEN LOGGING-->
+      <div class="mt-4">
+        <div *ngIf="!isSigningUp" class="row">
+          <div class="col d-flex justify-content-between">
+            <div>
+              <button (click)="useSignUpForm()" class="btn btn-sm btn-dark ml-1">
+                <h6 class="d-inline font-weight-bold">Sign-up</h6>
+              </button>
+            </div>
+            <div>
+              <button [disabled]="!isFormValid()" class="btn btn-sm btn-dark mr-2">
+                <!--              <button class="btn btn-sm btn-dark mr-2">-->
+                <h6 class="d-inline font-weight-bold">Login</h6>
+              </button>
+            </div>
           </div>
-          <div>
-            <button type="submit" [disabled]="formElement.invalid" class="btn btn-sm btn-dark mr-2">
-              <h6 class="d-inline font-weight-bold">Login</h6>
-            </button>
+        </div>
+
+        <div *ngIf="isSigningUp" class="row">
+          <div class="col d-flex justify-content-between">
+            <div>
+              <button (click)="useLoginForm()" class="btn btn-sm btn-dark ml-1">
+                <h6 class="d-inline font-weight-bold">Login</h6>
+              </button>
+            </div>
+            <div>
+              <button [disabled]="!isFormValid()" class="btn btn-sm btn-dark mr-2">
+                <!--              <button class="btn btn-sm btn-dark mr-2">-->
+                <h6 class="d-inline font-weight-bold">Confirm</h6>
+              </button>
+            </div>
           </div>
         </div>
       </div>
