--- a/src/app/components/recipe-results-list/recipe-results-list.component.html
+++ b/src/app/components/recipe-results-list/recipe-results-list.component.html
@@ -1,11 +1,11 @@
 <div *ngFor="let filter of FILTERS">
-    <label [for]="filter.id">{{filter.id}}</label>
-    <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
-        (change)="updateFilteredRecipes()" [value]="filter.value">
+  <label [for]="filter.id">{{filter.id}}</label>
+  <input (change)="updateFilteredRecipes()" [(ngModel)]="filterSelected" [id]="filter.id"
+         [value]="filter.value" type="radio">
 </div>
 
 <div>
-    <div *ngFor="let recipe of filteredRecipes">
-        <app-recipe-result [recipe]="recipe" (click)="loadRecipe(recipe)"></app-recipe-result>
-    </div>
+  <div *ngFor="let recipe of filteredRecipes">
+    <app-recipe-result (click)="loadRecipe(recipe)" [recipe]="recipe"></app-recipe-result>
+  </div>
 </div>
