--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -1,1 +1,11 @@
-<app-recipe-results-list></app-recipe-results-list>
+<div *ngFor="let filter of filters">
+    <label [for]="filter.id">{{filter.id}}</label>
+    <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
+        (change)="updateFilteredRecipes()" [value]="filter.value">
+</div>
+
+<div>
+    <div *ngFor="let recipe of filteredRecipes">
+        <app-recipe-result [recipe]="recipe" [routerLink]="'/recipe-details/'+recipe.idRecipe"></app-recipe-result>
+    </div>
+</div>
