--- a/src/app/components/recipe-search-bar/recipe-search-bar.component.html
+++ b/src/app/components/recipe-search-bar/recipe-search-bar.component.html
@@ -1,4 +1,4 @@
-<form #formElement="ngForm" (ngSubmit)="searchRecipe()" class="pb-1 pl-1">
+<form #formElement="ngForm" [routerLink]="'recipe-search/'+userSearch" class="pb-1 pl-1">
   <div class="row no-gutters">
     <div class="col-1 d-flex justify-content-end">
      <button [disabled]="formElement.invalid" class="btn btn-sm btn-light" type="submit">
