Delete recipe works (load correct param for test when Bastien has finished)

--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -6,6 +6,6 @@
 
 <div>
     <div *ngFor="let recipe of filteredRecipes">
-        <app-recipe-result [recipe]="recipe" [routerLink]="'/recipe-details/'+recipe.idRecipe"></app-recipe-result>
+        <app-recipe-result [recipe]="recipe" (recipeDeleted)="deleteRecipeInDB($event)"></app-recipe-result>
     </div>
 </div>
