--- a/src/app/components/recipe-result/recipe-result.component.html
+++ b/src/app/components/recipe-result/recipe-result.component.html
@@ -1,7 +1,10 @@
 <div>
+  <div  [routerLink]="'/recipe-details/'+recipe.idRecipe">
   <h2>{{recipe.nameRecipe}}</h2>
   <h3 *ngFor="let s of spices">*</h3>
   <h4>{{recipe.recipeType}} pour {{recipe.persons}} personnes ({{recipe.prepTime}} min)</h4>
   {{recipe.summary}}<br>
   <i>postée le {{recipe.postDate}} par {{recipe.pseudo}}</i>
+  </div>
+  <button *ngIf="type || id === recipe.idUser" (click)="deleteRecipe()">X</button>
 </div>
