--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="main-color shadow pt-2 pb-1">
+<div class="main-color shadow pt-2 pb-1 mb-2">
   <div class="container-fluid">
     <div class="row mb-2">
       <!--      Logo and login button for mobile-->
