--- a/src/app/components/pages/user-details/user-details.component.html
+++ b/src/app/components/pages/user-details/user-details.component.html
@@ -1,1 +1,12 @@
-<p>user-details works!</p>
+<div>
+    name : <h3>{{user.lastName}} "{{user.pseudo}}" {{user.firstName}}</h3>
+    mail : <h5>{{user.mail}}</h5>
+    password : <h5>{{passwordPlaceHolder}}</h5>
+    <h2>Recipes :</h2>
+    <div *ngFor="let recipe of recipes" [routerLink]="'/recipe-details/'+recipe.idRecipe">
+        <h3>{{recipe.nameRecipe}} (<app-recipe-avg-rate [idRecipe]="recipe.idRecipe"></app-recipe-avg-rate>/5)</h3>
+    </div>
+    <div *ngFor="let review of reviews" [routerLink]="'/recipe-details/'+review.idRecipe">
+        {{review.nameRecipe}}({{review.rate}}/5) : <p>{{review.reviewMessage}}</p>
+    </div>
+</div>
