Mise en page home/detail/review

--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,1 +1,23 @@
-<h1>BIENVENUE A LA MAISON</h1>
+<div class="container-fluid col-lg-12 imgHome p-2">
+
+  <h1 class="text-white">Recette du mois</h1>
+<div class="col-lg-6 col-sm-12 pb-2" style="background:rgba(255,255,255,0.60);backdrop-filter: blur(3px);">
+  <h2>{{recipe.nameRecipe}} de <i>{{recipe.pseudo}}</i></h2>
+  <div class="row">
+  <img class="pl-3 rounded-lg" src="../../../../assets/picture/tarteCitron.jpg" height="200" width="200">
+    <h5>{{recipe.summary}}</h5><br>
+
+<!--    <div class="carousel-inner">-->
+<!--      <div class="carousel-item" *ngFor="let review of reviews">-->
+
+<!--        <h6 class="col-2 text-left pl-3">{{review.pseudo}}</h6> ({{review.rate}}/5)-->
+<!--        <p class="font-italic col-2">{{review.reviewMessage}}</p>-->
+
+<!--      </div>-->
+
+<!--    </div>-->
+  </div>
+
+</div>
+
+</div>
