--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,11 @@ body {
 }
 
 .main-color {
-  background-color: #f9a335;
+  background-color: #000000;
 }
 
 #recipe-search-bar {
-  background-color: #f9a335;
+  background-color: #000000;
 }
 
 .align-y-center {
