--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,13 +1,17 @@
-<div class="main-color shadow pt-2 pb-1 mb-2">
+<div class="bg-dark shadow pt-2 pb-1">
   <div class="container-fluid">
     <div class="row mb-2">
       <!--      Logo and login button for mobile-->
-      <div class="col-7 offset-1 d-flex justify-content-start">
+      <div class="col-2  d-flex justify-content-start">
         <a class="" href="">
           <img [src]="LOGO_PATH" alt="logo"/>
         </a>
       </div>
-      <div class="col-4 d-flex justify-content-end pr-4">
+        <div class=" d-none d-md-block col-xl-6 d-flex justify-content-start offset-2 pl-4">
+        <img src="../../../assets/img/cuisineHELHa_logo.png" class="img-fluid" style="width: 85%;height: auto; max-width: 450px">
+        </div>
+
+      <div class="col-2 d-flex justify-content-end pr-4">
         <div class="d-flex ml-3">
           <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="2x"></fa>
         </div>
@@ -21,10 +25,10 @@
 
       <!--      Recipe search bar-->
     </div>
-    <div class="row">
-      <div class="col-12 col-sm-7 col-md-5 col-lg-4 col-xl-3">
+
+      <div class="col-12 col-sm-7 col-md-5 col-lg-8 col-xl-8 offset-xl-2">
         <app-recipe-search-bar></app-recipe-search-bar>
       </div>
-    </div>
+
   </div>
 </div>
