--- a/src/app/components/pages/recipe-details/recipe-details.component.html
+++ b/src/app/components/pages/recipe-details/recipe-details.component.html
@@ -1,29 +1,42 @@
-<h1>{{recipe.nameRecipe}}</h1>
-<h3 *ngFor="let s of spices">*</h3>
-<h4>{{recipe.recipeType}} pour {{recipe.persons}} personnes ({{recipe.prepTime}} min)</h4>
+<div class="container-fluid col-lg-12 imgDetail pt-2 pb-2">
+  <div class="container-fluid col-lg-3 ">  </div>
+  <div class="container-fluid border col-lg-6 col-sm-12 text-center bgDetail" >
+    <p class="text-right font-italic" style="font-size: small">postée le {{recipe.postDate}} par <b>{{recipe.pseudo}}</b></p>
+
+  <h3 class="text-center font-weight-bold pt-3 mb-0">{{recipe.nameRecipe}}</h3>
+ <span *ngFor="let s of spices"> <img src="../../../../assets/img/chili.png" height="20" width="20"></span>
+<h4 class="pt-2">{{recipe.recipeType}} pour {{recipe.persons}} personnes ({{recipe.prepTime}} min)</h4>
 {{recipe.summary}}<br>
-<i>postée le {{recipe.postDate}} par {{recipe.pseudo}}</i>
+
+    <img class="rounded-lg" src="../../../../assets/picture/tarteCitron.jpg" height="300" width="300">
 <br>
-ingrédients :
+    <h5 class="font-weight-bold pt-2">Ingrédients :</h5>
+
+    <p class="mb-0" *ngFor="let ingredient of ingredients">
+         {{ingredient.nameIngredient}} {{ingredient.quantity}} {{ingredient.unit}}
+    </p>
+
+    <h5 class="font-weight-bold mt-1">Préparation :</h5>
 <ul>
-    <li *ngFor="let ingredient of ingredients">
-        {{ingredient.quantity}}{{ingredient.unit}} {{ingredient.nameIngredient}}
-    </li>
-</ul>
-préparation :
-<ul>
-    <li *ngFor="let step of steps">
-        {{step.stepNb}} : {{step.step}}
-    </li>
+    <p *ngFor="let step of steps">
+<!--        {{step.stepNb}} : -->
+      {{step.step}}
+    </p>
 </ul>
 
-<app-review-form *ngIf="true; else guestUser;" (reviewPosted)="postReview($event)"></app-review-form>
-<div *ngFor="let review of reviews">
-    <h6>{{review.pseudo}}</h6> ({{review.rate}}/5)
-    <p>{{review.reviewMessage}}</p>
+
+    <h5 class="pl-2 text-left font-weight-bold">Commentaires</h5>
+    <app-review-form *ngIf="true; else guestUser;" (reviewPosted)="postReview($event)"></app-review-form>
+<div class="row pt-2" *ngFor="let review of reviews">
+    <h6 class="col-2 text-left pl-3">{{review.pseudo}}</h6> ({{review.rate}}/5)
+    <p class="font-italic col-2">{{review.reviewMessage}}</p>
     <button *ngIf="type || idUser === review.idUser" (click)="deleteReviewInDB(review)">supprimer le commentaire</button>
 </div>
 
 <ng-template #guestUser>
     <b>You must log in to post a review</b>
 </ng-template>
+
+</div>
+<div class="container-fluid col-lg-3"></div>
+
