--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -12,7 +12,7 @@
       <div class="row">
         <span class="col">
           <input class="form-control form-control-sm" formControlName="login" id="login" name="login" type="text">
-          <h6 *ngIf="!loginValid()" class="text-danger pl-1">Invalid login</h6>
+          <h6 *ngIf="!loginValid() && submitted" class="text-danger pl-1">Invalid login</h6>
         </span>
       </div>
       <div class="row mt-3">
@@ -26,12 +26,12 @@
         <span class="col">
           <input class="form-control form-control-sm" formControlName="password" id="password" name="password"
                  type="password">
-          <h6 *ngIf="!passwordValid()" class="text-danger pl-1">Invalid password</h6>
+          <h6 *ngIf="!passwordValid() && submitted" class="text-danger pl-1">Invalid password</h6>
         </span>
       </div>
-      <div *ngIf="_error && !_isSigningUp" class="row mt-2 text-danger font-weight-bold">
+      <div *ngIf="error && !isSigningUp" class="row mt-2 text-danger font-weight-bold">
         <div class="col">
-          <h6>{{_error}}</h6>
+          <h6>{{error}}</h6>
         </div>
       </div>
 
@@ -102,8 +102,8 @@
         <div *ngIf="!isSigningUp" class="row">
           <div class="col d-flex justify-content-between">
             <div class="order-1">
-              <button [disabled]="!isFormValid() || _isLoading" class="btn btn-sm btn-dark mr-2">
-                <div [hidden]="!_isLoading" name=""class="mr-1 spinner-border spinner-border-sm"></div>
+              <button [disabled]="!isFormValid() || isLoading" class="btn btn-sm btn-dark mr-2">
+                <div [hidden]="!isLoading" class="mr-1 spinner-border spinner-border-sm"></div>
                 <h6 class="d-inline font-weight-bold">Login</h6>
               </button>
             </div>
@@ -118,8 +118,8 @@
 <!--        WHEN SIGNING UP-->
         <div *ngIf="isSigningUp" class="row">
           <div class="order-1">
-            <button [disabled]="!isFormValid() || _isLoading" class="btn btn-sm btn-dark mr-2">
-              <div [hidden]="!_isLoading" name=""class="mr-1 spinner-border spinner-border-sm"></div>
+            <button [disabled]="!isFormValid() || isLoading" class="btn btn-sm btn-dark mr-2">
+              <div [hidden]="!isLoading" class="mr-1 spinner-border spinner-border-sm"></div>
               <h6 class="d-inline font-weight-bold">Confirm</h6>
             </button>
           </div>
