--- a/src/app/components/review-form/review-form.component.html
+++ b/src/app/components/review-form/review-form.component.html
@@ -1,8 +1,8 @@
-<form *ngIf="authService.currentUserValue" [formGroup]="_form" (ngSubmit)="postReview()">
+<form *ngIf="authService.currentUserValue" [formGroup]="form" (ngSubmit)="postReview()">
     <label for="rate">Rating (X/5): </label>
     <input id="rate" type="number" min="0" max="5" formControlName="rate">
     <label for="review">Review : </label>
     <textarea id="review" formControlName="review">
     </textarea>
-    <button [disabled]="!_form.valid">Post review</button>
+    <button [disabled]="!form.valid">Post review</button>
 </form>
