--- a/src/app/components/review-form/review-form.component.html
+++ b/src/app/components/review-form/review-form.component.html
@@ -10,7 +10,7 @@
     <textarea class="col-4 ml-2" id="review" formControlName="review">
     </textarea>
     <input class="col-1 ml-4" id="rate" type="number" min="0" max="5" formControlName="rate">
-    <button class="text-lg-center ml-5" [disabled]="!_form.valid">Post review</button>
+    <button class="text-lg-center ml-5 btn-dark" [disabled]="!_form.valid">Post review</button>
   </div>
 
 </form>
