--- a/src/app/components/pages/recipe-create/recipe-create.component.html
+++ b/src/app/components/pages/recipe-create/recipe-create.component.html
@@ -6,7 +6,7 @@
 </div>
 <div class="container-fluid border col-lg-7 col-sm-12 text-center" style="background: rgba(255,255,255,0.80);backdrop-filter: blur(3px);">
   <h3 class="text-center font-weight-bold p-3">Create recipe</h3>
-  <form #formElement="ngForm" (ngSubmit)=addRecipe()>
+  <form #formElement="ngForm" (ngSubmit)=postRecipe()>
     <div class="form-row">
       <div class="col-md-12 mb-3">
         <label for="recipeName">Recipe Name</label>
@@ -89,8 +89,8 @@
         <label for="addPicture">Ajouter une image</label>
         <input type="file" class="form-control-file align-content-center" id="addPicture">
       </div>
-    <button [disabled]="!formElement.valid" class="btn btn-md btn-warning mr-2 col-12 mt-2" type="submit">
-      <h6 class="d-inline font-weight-bold">Submit recipe</h6>
+    <button [disabled]="!formElement.valid" class="btn btn-md btn-dark mr-2 col-12 mt-2 mb-2" type="submit">
+      <h6 class="d-inline font-weight-bold ">Submit recipe</h6>
     </button>
   </form>
 </div>
