--- a/src/app/components/pages/recipe-details/recipe-details.component.html
+++ b/src/app/components/pages/recipe-details/recipe-details.component.html
@@ -1,22 +1,22 @@
 <div class="container-fluid col-lg-12 imgDetail pt-2 pb-2">
   <div class="container-fluid col-lg-3 ">  </div>
   <div class="container-fluid border col-lg-6 col-sm-12 text-center bgDetail" >
-    <p class="text-right font-italic" style="font-size: small">postée le {{recipe.postDate}} par <b>{{recipe.pseudo}}</b></p>
+    <p class="text-right font-italic" style="font-size: small">post on {{recipe.postDate}} by <b>{{recipe.pseudo}}</b></p>
 
   <h3 class="text-center font-weight-bold pt-3 mb-0">{{recipe.nameRecipe}}</h3>
  <span *ngFor="let s of spices"> <img src="../../../../assets/img/chili.png" height="20" width="20"></span>
-<h4 class="pt-2">{{recipe.recipeType}} pour {{recipe.persons}} personnes ({{recipe.prepTime}} min)</h4>
+<h4 class="pt-2">{{recipe.recipeType}} for {{recipe.persons}} persons ({{recipe.prepTime}} min)</h4>
 {{recipe.summary}}<br>
 
     <img class="rounded-lg" src="../../../../assets/picture/tarteCitron.jpg" height="300" width="300">
 <br>
-    <h5 class="font-weight-bold pt-2">Ingrédients :</h5>
+    <h5 class="font-weight-bold pt-2">Ingredients :</h5>
 
     <p class="mb-0" *ngFor="let ingredient of ingredients">
          {{ingredient.nameIngredient}} {{ingredient.quantity}} {{ingredient.unit}}
     </p>
 
-    <h5 class="font-weight-bold mt-1">Préparation :</h5>
+    <h5 class="font-weight-bold mt-1">Preparation :</h5>
 <ul>
     <p *ngFor="let step of steps">
 <!--        {{step.stepNb}} : -->
@@ -25,12 +25,12 @@
 </ul>
 
 
-    <h5 class="pl-2 text-left font-weight-bold">Commentaires</h5>
+    <h5 class="pl-2 text-left font-weight-bold">Comments</h5>
     <app-review-form *ngIf="true; else guestUser;" (reviewPosted)="postReview($event)"></app-review-form>
 <div class="row pt-2" *ngFor="let review of reviews">
     <h6 class="col-2 text-left pl-3">{{review.pseudo}}</h6> ({{review.rate}}/5)
-    <p class="font-italic col-2">{{review.reviewMessage}}</p>
-    <button *ngIf="type || idUser === review.idUser" (click)="deleteReviewInDB(review)">supprimer le commentaire</button>
+  <p class="font-italic col-5">{{review.reviewMessage}}</p>
+    <button class="btn-dark" *ngIf="type || idUser === review.idUser" (click)="deleteReviewInDB(review)">Delete Comment</button>
 </div>
 
 <ng-template #guestUser>
