--- a/src/app/components/pages/home/home.component.html
+++ b/src/app/components/pages/home/home.component.html
@@ -1,24 +1,22 @@
 <div class="container-fluid col-lg-12 imgHome p-2">
 
   <h1 class="text-white">Recipe of the month</h1>
-<div class="col-lg-6 col-sm-12 pb-2" style="background:rgba(255,255,255,0.60);backdrop-filter: blur(3px);"
-     [routerLink]="'/recipe-details/'+recipe.idRecipe">
-  <h2>{{recipe.nameRecipe}} by <i>{{recipe.pseudo}}</i></h2>
-  <div class="row">
-  <img class="pl-3 rounded-lg" src="../../../../assets/picture/tarteCitron.jpg" height="200" width="200">
-    <h5>{{recipe.summary}}</h5><br>
 
-<!--    <div class="carousel-inner">-->
-<!--      <div class="carousel-item" *ngFor="let review of reviews">-->
-
-<!--        <h6 class="col-2 text-left pl-3">{{review.pseudo}}</h6> ({{review.rate}}/5)-->
-<!--        <p class="font-italic col-2">{{review.reviewMessage}}</p>-->
-
-<!--      </div>-->
-
-<!--    </div>-->
+  <div class="card mb-3 bgwhite" [routerLink]="'/recipe-details/'+recipe.idRecipe">
+    <div class="row no-gutters">
+      <div class="col-sm-4">
+        <img src="../../../../assets/picture/tarteCitron.jpg" class="card-img" alt="tarte">
+      </div>
+      <div class="col-sm-8">
+        <div class="card-body">
+          <h5 class="card-title">{{recipe.nameRecipe}} by <i>{{recipe.pseudo}}</i></h5>
+          <p class="card-text">{{recipe.summary}}</p>
+          <p class="card-text"><small class="text-muted">posted on {{recipe.postDate}}</small></p>
+        </div>
+      </div>
+    </div>
   </div>
 
-</div>
+
 
 </div>
