--- a/src/app/components/pages/recipe-search/recipe-search.component.html
+++ b/src/app/components/pages/recipe-search/recipe-search.component.html
@@ -1,11 +1,19 @@
-<div *ngFor="let filter of filters">
-    <label [for]="filter.id">{{filter.id}}</label>
-    <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
-        (change)="updateFilteredRecipes()" [value]="filter.value">
+<div class="container-fluid col-lg-12 imgHome p-2">
+  <div class="p-2 container-fluid border col-lg-7 col-sm-12 text-center" style="background: rgba(255,255,255,0.60);backdrop-filter: blur(3px);">
+    <div class="row ml-3">
+      <div *ngFor="let filter of filters">
+        <input type="radio" [id]="filter.id"[(ngModel)]="filterSelected"
+               (change)="updateFilteredRecipes()" [value]="filter.value">
+          <label [for]="filter.id" class="m-2">{{filter.id}}</label>
+
+      </div>
+    </div>
+    <div>
+      <h3>Résultat de la recherche pour {{searchText}}</h3>
+        <div class="text-left" *ngFor="let recipe of filteredRecipes">
+            <app-recipe-result [recipe]="recipe" (recipeDeleted)="deleteRecipeInDB($event)"></app-recipe-result>
+        </div>
+    </div>
+  </div>
 </div>
 
-<div>
-    <div *ngFor="let recipe of filteredRecipes">
-        <app-recipe-result [recipe]="recipe" (recipeDeleted)="deleteRecipeInDB($event)"></app-recipe-result>
-    </div>
-</div>
