other: clean code, lint, change apiUrl, clean UI

--- a/src/app/components/login-form/login-form.component.html
+++ b/src/app/components/login-form/login-form.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <span class="col col-sm-3">
           <label for="login">
-              Login:
+              Username:
           </label>
         </span>
       </div>
