--- a/src/app/components/pages/recipe-details/recipe-details.component.css
+++ b/src/app/components/pages/recipe-details/recipe-details.component.css
@@ -1,6 +1,7 @@
-.imgDetail{
+.detail-recipe-img{
   background-image: url("../../../../assets/img/sushi.jpg");
   background-size: cover;
+  min-height: 704px;
 }
 
 .bgDetail{
