--- a/src/app/components/account-modal/account-modal.component.html
+++ b/src/app/components/account-modal/account-modal.component.html
@@ -7,7 +7,7 @@
         <div class="col">
           <div class="modal-content border-0">
             <div class="modal-header bg-dark shadow-sm">
-              <h5 class="modal-title font-weight-bold" id="accountModalLabel">Account</h5>
+              <h5 class="modal-title font-weight-bold text-light" id="accountModalLabel">Account</h5>
               <button aria-label="Close" class="close" data-dismiss="modal" type="button">
                 <fa name="close" size="1x"></fa>
               </button>
