--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,19 @@
-<div class="bg-dark text-center text-light" style="font-size: 11px">
-  <b>Credits</b>
-  <p class="m-0">Decorte Bastien</p>
-  <p class="m-0">Draux Elsa</p>
-  <p class="m-0">Roekens Robin</p>
+<div class="bg-dark text-light p-2 border-top border-light-transparent border-md">
+  <div class="container-fluid">
+    <div class="row align-items-end">
+      <div class="col-6">
+        <h5 class="pl-2 mb-2 text-light">Our team:</h5>
+        <h6 class="mb-0 text" style="font-size: 17px">
+          <a class="text-primary" href="https://www.linkedin.com/in/bastiendecorte/">Decorte Bastien</a> -
+          <a class="text-primary" href="https://www.linkedin.com/in/elsa-draux-2837a089/">Draux Elsa</a> -
+          <a class="text-primary" href="https://www.linkedin.com/in/robin-roekens-327071181/">Roekens Robin</a>
+        </h6>
+      </div>
+      <div class="col-6 text-right">
+        <h5 class="mb-0">
+          <a class="text-primary" href="https://github.com/CuisinHELHa">Github</a>
+        </h5>
+      </div>
+    </div>
+  </div>
 </div>
