--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,34 +1,25 @@
-<div class="bg-dark shadow pt-2 pb-1">
+<div class="bg-dark shadow pt-3 pb-1 border-bottom border-light-transparent border-md">
   <div class="container-fluid">
-    <div class="row mb-2">
-      <!--      Logo and login button for mobile-->
-      <div class="col-2  d-flex justify-content-start">
-        <a class="" href="">
-          <img [src]="LOGO_PATH" alt="logo"/>
-        </a>
-      </div>
-        <div class=" d-none d-md-block col-xl-6 d-flex justify-content-start offset-2 pl-4">
-        <img src="../../../assets/img/cuisineHELHa_logo.png" class="img-fluid" style="width: 85%;height: auto; max-width: 450px">
-        </div>
+    <div class="row mb-3 justify-content-center">
 
-      <div class="col-2 d-flex justify-content-end pr-4">
-        <div class="d-flex ml-3">
-          <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="2x"></fa>
+      <div class="col-sm-6 offset-sm-3 d-none d-md-block d-flex text-center">
+        <img class="img-fluid mx-auto" src="../../../assets/img/cuisineHELHa_logo.png" routerLink=""
+             style="width: 85%;height: auto; max-width: 415px">
+      </div>
+
+      <div class="mt-2 mt-sm-0 col-sm-2 offset-sm-1 d-flex justify-content-end">
+        <div class="d-flex p-2 mx-auto mr-2 mt-2 rounded-circle text-white bg-dark-neutral border border-light-transparent" style="max-height: 64px">
+          <fa (click)="onLoginIconClick()" class="my-auto" name="user-circle" size="3x"></fa>
         </div>
       </div>
 
-      <!--      Login form-->
-      <!--      <div class="col-md-4 offset-md-6 pb-1">-->
-      <!--        <app-login-form *ngIf="!mobile"></app-login-form>-->
-      <!--        <app-login-form *ngIf="mobile && clickedLoginIcon"></app-login-form>-->
-      <!--      </div>-->
-
-      <!--      Recipe search bar-->
     </div>
 
-      <div class="col-12 col-sm-7 col-md-5 col-lg-8 col-xl-8 offset-xl-2">
+    <div class="row">
+      <div class="col-12 col-sm-7 col-md-5 col-lg-8 col-xl-8 offset-xl-2 p-2">
         <app-recipe-search-bar></app-recipe-search-bar>
       </div>
+    </div>
 
   </div>
 </div>
