--- a/src/app/components/pages/home/home.component.css
+++ b/src/app/components/pages/home/home.component.css
@@ -1,14 +1,16 @@
-.imgHome{
-  background-image: url("../../../../assets/img/accueil.jpg");
+.home-img {
+  background-image: url("../../../../assets/img/accueil2.jpg");
   background-size: cover;
-  min-height: 550px;
+  min-height: 704px;
 }
-.bgwhite{
+
+.bg-white {
   max-width: 700px;
-  background:rgba(255,255,255,0.60);
+  background: rgba(255, 255, 255, 0.60);
   backdrop-filter: blur(3px);
 }
-.bgwhite:hover{
+
+.bg-white:hover {
   max-width: 700px;
   backdrop-filter: blur(3px);
   cursor: pointer;
