--- a/src/app/components/pages/recipe-search/recipe-search.component.css
+++ b/src/app/components/pages/recipe-search/recipe-search.component.css
@@ -1,4 +1,4 @@
-.imgHome{
+.home-img{
   background-image: url("../../../../assets/img/accueil.jpg");
   background-size: cover;
   min-height: 550px;
