--- a/src/app/components/recipe-search-bar/recipe-search-bar.component.html
+++ b/src/app/components/recipe-search-bar/recipe-search-bar.component.html
@@ -8,7 +8,7 @@
     <div class="col-11">
       <input #loginElement="ngModel" [(ngModel)]="userSearch" class="form-control form-control-sm" id="userSearch"
              minlength="3"
-             name="userSearch" placeholder="Enter recipe, ingredient, ..." required type="text">
+             name="userSearch" placeholder="Enter recipe, ingredient, ... (you can try cookie, tart, poulet)" required type="text">
     </div>
   </div>
 </form>
