--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-account-modal></app-account-modal>
 <app-header></app-header>
-<router-outlet></router-outlet>
+<div style="min-height: 704px;">
+  <router-outlet></router-outlet>
+</div>
 <app-footer></app-footer>
